# LLVM-Optimization-Pass-Framework

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/harness/: requirements.txt  run_benchmarks.py
benchmarks/kernels/: arith_redundant.c  branchy.c  clean.c  dead_code.c
benchmarks/results/: benchmarks.csv  opcodes.csv
docs/: ENGINEERING_LOG.md  architecture.md  benchmarks.md  design_decisions.md  passes.md  usage.md
examples/: composite.ll  walkthrough.md
include/opf/analysis/: block_stats.hpp  dead_code_report.hpp  opcode_stats.hpp  simplify_opportunities.hpp
include/opf/support/: instruction_key.hpp  metrics_json.hpp  pipeline_logging.hpp
include/opf/transforms/: algebraic_simplify.hpp  canonicalize.hpp  dce.hpp  default_pipeline.hpp  local_cse.hpp
lib/: CMakeLists.txt  plugin_registration.cpp
lib/analysis/: block_stats.cpp  dead_code_report.cpp  opcode_stats.cpp  simplify_opportunities.cpp
lib/support/: instruction_key.cpp  metrics_json.cpp  pipeline_logging.cpp
lib/transforms/: algebraic_simplify.cpp  canonicalize.cpp  dce.cpp  default_pipeline.cpp  local_cse.cpp
report/: Makefile  latexmkrc  main.tex  references.bib
report/sections/: abstract.tex  appendix.tex  background.tex  conclusion.tex  design.tex  discussion.tex  experiments.tex  futurework.tex  implementation.tex  introduction.tex  limitations.tex  results.tex
report/tables/: table_checksum.tex  table_runtime.tex  table_structural.tex  values.tex
report_debug/: Makefile  debug_report.tex  latexmkrc
report_debug/sections/: closing.tex  correctness.tex  measurement.tex  passmanager.tex  tooling.tex
scripts/: build.sh  check_format.sh  check_no_dashes.py  check_python.sh  generate_plots.py  run_benchmarks.sh  run_tests.sh
tests/: CMakeLists.txt
tests/lit/: CMakeLists.txt  analysis_block_stats.ll  analysis_dead_code.ll  analysis_opcode_stats.ll  analysis_simplify_opps.ll  analysis_unreachable_block.ll  lit.cfg.py  lit.site.cfg.py.in  metrics_json.ll  pipeline_default.ll  pipeline_logging.ll  smoke_noop.ll  xform_algebraic_identities.ll  xform_canonicalize.ll  xform_dce.ll  xform_local_cse.ll  xform_negative.ll  xform_strength_reduce.ll
tests/unit/: CMakeLists.txt  analysis_metrics_test.cpp  invalidation_test.cpp
